refactor: изменить получение событий пользователя и их сортировку